# CGAL-Examples

./: .gitmodules  CMakeLists.txt  README.md
data/: mountain.ply  s1sd.ply
src/: 11points_and_segment.cpp  12surprising.cpp  13exact.cpp  14array_convex_hull_2.cpp  15vector_convex_hull_2.cpp  16convex_hull_yz.cpp  21surface_mesh.cpp  22mesh_curvature.cpp  22mesh_viewer.cpp
